--- a/styles.css
+++ b/styles.css
@@ -85,7 +85,7 @@ a{
     min-height: 250px;
     text-align: center;
     color: #fff;
-    background: #008cfa url("images/jordantoe.jpg");
+    background: #008cfa url("jordantoe.jpg");
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
